correction of comments